@@ -89,6 +89,8 @@
 	  incoming connection
 	* added more detailed instrumentation of the disk I/O thread
 
+	* fix tracker retry logic, where in some configurations the next tier would not be tried
+	* fixed bug in http seeding logic (introduced in 0.15.7)
 	* add support for dont-have extension message
 	* fix for set_piece_deadline
 	* add reset_piece_deadline function
